# MetaIO

./: CMakeLists.txt
src/: CMakeLists.txt
src/tests/: CMakeLists.txt  testMeta12Array.cxx
